--- a/css/style.css
+++ b/css/style.css
@@ -414,7 +414,7 @@ h3{
 
 /* header3 */
 .header3 {
-    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3)), url(../img/studio.jpg) center/cover no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3)), url(../img/akl-final.png) center/cover no-repeat;
     height: 100vh;
     color: #fff;
     display: flex;
